# yew_router

./: Cargo.toml  README.md  rustfmt.toml
crates/yew_router_macro/src/: from_matches.rs  lib.rs  route.rs  switch.rs
crates/yew_router_route_parser/src/: lib.rs  token_optimizer.rs
examples/guide/: Cargo.toml
examples/guide/chapters/: 04_render.md  05_testing.md
examples/guide/src/: guide.rs  main.rs  markdown.rs  markdown_window.rs  page.rs
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs
examples/nested_routers/: Cargo.toml
examples/nested_routers/src/: a_comp.rs  b_comp.rs  main.rs  page_not_found.rs
examples/router_component/src/: a_component.rs  b_component.rs  c_component.rs  main.rs
examples/routing_component/: Cargo.toml
examples/routing_component/src/: a_component.rs  b_component.rs  c_component.rs  (+1 more)
src/: alias.rs  lib.rs  route.rs  route_info.rs  router.rs  router_agent.rs  service.rs  switch.rs
src/agent/: bridge.rs  dispatcher.rs  mod.rs
src/component_router/: yew_router.rs
src/component_routers/: mod.rs  yew_router.rs
src/components/: mod.rs  route_injector.rs  router_button.rs  router_link.rs
src/matcher/: mod.rs
src/router/: mod.rs  render.rs  route.rs  router.rs  router2.rs
yew_router/: Cargo.toml
yew_router/src/: alias.rs  lib.rs
yew_router/src/components/: active_wrapper.rs  mod.rs  route_injector.rs  router_button.rs  router_link.rs
yew_router/src/matcher/: mod.rs  regex_matcher.rs
yew_router/src/matcher/route_matcher/: mod.rs
yew_router/src/router_component/: render.rs  route.rs  router.rs
(+15 files in other folders)
