[package]
name = "yew_router"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
edition = "2018"


[features]
default = ["router", "components"]

router = ["router_agent", "matchers"]
components = ["router_agent", "matchers"]

router_agent = []
matchers = ["nom", "regex_matcher", "yew_router_route_parser", "yew_router_derive"]
regex_matcher = ["regex"]


[dependencies]
log = "0.4"
#web_logger = "0.2"
serde = "1.0"
serde_derive = "1.0"
yew = { git = "https://github.com/yewstack/yew", branch="master" }
stdweb = "0.4"


yew_router_route_parser = {path = "../yew_router_route_parser", optional=true}
yew_router_derive = {path = "../yew_router_derive", optional=true} # TODO Make this optional.
nom = {version = "5.0.0", optional=true}
regex = {version = "1.3.1", optional=true} # TODO make this optional.
